live notification basic implementation - publish and consume using Kafka, notify client using SSE